fix: task name to set system locale

--- a/effective_ansible/sec3/linux_configuration/roles/common/locale/tasks/main.yml
+++ b/effective_ansible/sec3/linux_configuration/roles/common/locale/tasks/main.yml
@@ -3,7 +3,7 @@
   community.general.timezone:
     name: "{{ locale_timezone }}"
 
-- name: Set the system locale:
+- name: Set the system locale
   ansible.builtin.command: localectl set-locale LANG={{ locale_locale }}
 
 - name: Set the keymap
