fix: localectl set-keymap use invalid var

--- a/effective_ansible/sec3/linux_configuration/roles/common/locale/tasks/main.yml
+++ b/effective_ansible/sec3/linux_configuration/roles/common/locale/tasks/main.yml
@@ -8,7 +8,7 @@
 
 - name: Set the keymap
   block:
-    - ansible.builtin.command: localectl set-keymap {{ local_keymap }}
+    - ansible.builtin.command: localectl set-keymap {{ locale_keymap }}
       register: keymap_cmd_result
       failed_when: keymap_cmd_result.rc == 1
   rescue:
