Sec3/set locale (#2)
* feat: set locale

* fix: task name to set system locale

* fix: localectl set-keymap use invalid var

--- a/effective_ansible/sec3/linux_configuration/roles/common/locale/tasks/main.yml
+++ b/effective_ansible/sec3/linux_configuration/roles/common/locale/tasks/main.yml
@@ -3,12 +3,12 @@
   community.general.timezone:
     name: "{{ locale_timezone }}"
 
-- name: Set the system locale:
+- name: Set the system locale
   ansible.builtin.command: localectl set-locale LANG={{ locale_locale }}
 
 - name: Set the keymap
   block:
-    - ansible.builtin.command: localectl set-keymap {{ local_keymap }}
+    - ansible.builtin.command: localectl set-keymap {{ locale_keymap }}
       register: keymap_cmd_result
       failed_when: keymap_cmd_result.rc == 1
   rescue:
